piccoli bug fix

--- a/galleria/src/main/resources/templates/news.html
+++ b/galleria/src/main/resources/templates/news.html
@@ -14,11 +14,12 @@
   <a href="/user/opere">Work of art</a>
   <a href="/accedi">Register here</a>
   <a href="/accedi">Login/Logout</a>
-  <a href="/accedi_admin">Admin</a>
+  <a href="/accedi_admin">Administrator</a>
 </div>
 <font size="8">
 Il progetto e' stato organizzato dividendosi i compiti nel seguente modo:<br></br>
-Bonanni G. -> autenticazione (login/logout/ruoli), gestione dei collegamenti tra le pagine attraverso i controller, gestione degli artisti<br></br>
+Bonanni G. -> autenticazione (login/logout/ruoli), gestione dei collegamenti e della privatezza delle pagine, gestione degli artisti,<br></br>
+modifica opera aggiornata e fixata<br></br>
 Oancea S. -> css e bootstrap delle pagine, gestione delle opere
 </font>
 </body>
