--- a/galleria/src/main/resources/templates/artista/artisti.html
+++ b/galleria/src/main/resources/templates/artista/artisti.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="ISO-8859-1"/>
 <link rel="stylesheet" href="css/index.css" />
-<title>News</title>
-<style> html { 
+<title>Artists</title>
+<style> /* html { 
   background: url('https://www.artsfon.com/pic/201602/1920x1200/artsfon.com-81003.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+} */
 </style>
 
 </head>
