--- a/galleria/src/main/resources/templates/artista/resultsArtista.html
+++ b/galleria/src/main/resources/templates/artista/resultsArtista.html
@@ -1,56 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html>
 <head>
-<meta charset="utf-8" />
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
-<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Artista inserito</title>
-
-<meta
-	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-	name='viewport' />
-<meta name="viewport" content="width=device-width" />
-
-<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-<link href="css/gsdk.css" rel="stylesheet" />
-<link href="css/demo.css" rel="stylesheet" />
-<link href="css/siw.css" rel="stylesheet" />
-<!--     Font Awesome     -->
-<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
-<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
-	rel='stylesheet' type='text/css' />
-
+<meta charset="ISO-8859-1"/>
+<link rel="stylesheet" href="css/index.css" />
+<title>News</title>
 </head>
-<body id="page-top" style="background-image: url('https://www.premioceleste.it/_files/opere/2013_53521_199648.jpg')">
+<body text="white">
+<div class="topnav">
+  <a href="/">Home</a>
+  <a class="active" href="/news">News</a>
+  <a href="/contacts">Contact</a>
+  <a href="/user/artisti">Artists</a>
+  <a href="/user/opere">Works of art</a>
+  <a href="/accedi">Register here</a>
+  <a href="/accedi">Login/Logout</a>
+  <a href="/accedi_admin">Administrator</a>
+</div>
 
-	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				
-				<a class="navbar-brand page-scroll" href="/">HOME</a>
-			</div>
-
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-left">
-                    
-                    <li>
-                        <a class="page-scroll" href="/user/artisti">List of artists</a>
-                    </li>
-   
-             <li>
-                        <a class="page-scroll" href="/user/opere">List of works of art</a>
-                    </li>
-                </ul>
-                </div>
-			
-		</div>
-		
-	</nav>
 
 
 		<div class="center">
