ulteriori bug fixes

--- a/galleria/src/main/resources/templates/artista/artisti.html
+++ b/galleria/src/main/resources/templates/artista/artisti.html
@@ -20,10 +20,9 @@
   <a href="/news">News</a>
   <a class="active" href="/contacts">Contact</a>
   <a href="/user/artisti">Artists</a>
-  <a href="/user/opere">Work of art</a>
-  <a href="/accedi">Register here</a>
-  <a href="/accedi">Login/Logout</a>
-  <a href="/accedi_admin">Admin</a>
+  <a href="/user/opere">Works of art</a>
+  <a href="/logout">Logout</a>
+  <a href="/accedi_admin">Administrator</a>
 </div>
 <font size="9">
 <div align="center">List of artists</div>
