tolti collegamenti morti,aggiornato news

--- a/galleria/src/main/resources/templates/news.html
+++ b/galleria/src/main/resources/templates/news.html
@@ -19,7 +19,7 @@
 <font size="8">
 Il progetto e' stato organizzato dividendosi i compiti nel seguente modo:<br></br>
 Bonanni G. -> autenticazione (login/logout/ruoli), gestione dei collegamenti e della privatezza delle pagine, gestione degli artisti,<br></br>
-modifica opera aggiornata e fixata<br></br>
+modifica opera aggiornata e fixata; Il validator viene bypassato all'inserimento di una nuova opera<br></br>
 Oancea S. -> css e bootstrap delle pagine, gestione delle opere
 </font>
 </body>
