--- a/galleria/src/main/resources/templates/opera/formO.html
+++ b/galleria/src/main/resources/templates/opera/formO.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1"/>
 <link rel="stylesheet" href="css/index.css" />
-<title>Artists</title>
+<title>Work of art form</title>
 <style> /* html { 
   background: url('https://www.artsfon.com/pic/201602/1920x1200/artsfon.com-81003.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -20,7 +20,7 @@
   <a href="/news">News</a>
   <a class="active" href="/contacts">Contact</a>
   <a href="/user/artisti">Artists</a>
-  <a href="/user/opere">Works of art</a>
+  <a href="/admin/opere">Works of art</a>
   <a href="/admin/artista">Insert an artist</a>
   <a href="/logout">Logout</a>
   <a href="/accedi_admin">Admin</a>
