--- a/galleria/src/main/resources/templates/opera/formO.html
+++ b/galleria/src/main/resources/templates/opera/formO.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1"/>
 <link rel="stylesheet" href="css/index.css" />
@@ -57,6 +57,23 @@
 						</span>
 					</div>
 				</div>
+				<!-- <div class="form-group"
+					th:class="${#fields.hasErrors('titolo')} ? 'form-group has-error' : 'form-group'">
+					<label class="col-sm-2 control-label">Artista:</label>
+					<div class="col-sm-5">
+						<input type="text" class="form-control" th:field="*{titolo}"
+							th:errorclass="has-error" /> <span class="help-block">
+							<ul>
+								<li th:each="err : ${#fields.errors('titolo')}" th:text="${err}" />
+							</ul>
+						</span>
+					</div>
+				</div> -->
+				<span th:text="#{label.artista}">Artista:</span> <select
+					th:field="*{artista}">
+					<option th:each="artista : ${artisti}" th:value="${artista.id}"
+						th:text="${artista.nome} +' '+ ${artista.cognome}"></option>
+				</select>
 				<div class="form-group"
 					th:class="${#fields.hasErrors('anno')} ? 'form-group has-error' : 'form-group'">
 					<label class="col-sm-2 control-label">Anno:</label>
