--- a/galleria/src/main/resources/templates/opera/formO.html
+++ b/galleria/src/main/resources/templates/opera/formO.html
@@ -57,7 +57,7 @@
 						</span>
 					</div>
 				</div>
-				
+				<!-- non committa? -->
 				<span th:text="#{label.artista}">Artista:</span> <select
 					th:field="*{artista}">
 					<option th:each="artista : ${artisti}" th:value="${artista.id}"
