--- a/galleria/src/main/resources/static/css/index.css
+++ b/galleria/src/main/resources/static/css/index.css
@@ -1,54 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {margin:0;}
- html { 
-  background: url('https://s-media-cache-ak0.pinimg.com/originals/85/fe/f7/85fef7b1a4188f8a63f29a28eaa6fd09.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+html { 
+  background-color: #9cb7be;
+  color: white;
 }
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-}
-</style>
-</head>
-<body>
-
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-</div>
-
-<div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
-  <p>Some content..</p>
-</div>
-
-</body>
-</html>
