--- a/galleria/src/main/resources/templates/accesso.html
+++ b/galleria/src/main/resources/templates/accesso.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-<link rel="stylesheet" href="css/accesso.css" />
-    <title></title>
-</head>
-<body>
-<div class="topnav">
-  <a href="/">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a class="active" href="accedi">Login/SignUp</a>
- <!--  <a href="signUp">Sign-up</a> -->
-  <a href="accedi_admin"><b>Administrator</b></a>
-  <a sec:authorize="isAuthenticated()" href="/logout">Logout</a>								
-                    
-</div>
+	<head>
+		<!-- CSS only -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<!-- JavaScript Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="css/index.css" />
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		  <a class="navbar-brand" href="/">Art gallery</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarColor02">
+		    <ul class="navbar-nav mr-auto">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="/">Home</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/news">News</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/contacts">Contact</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="accedi">Login/SignUp</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="accedi_admin">Administrator</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" sec:authorize="isAuthenticated()" href="/logout">Logout</a>
+		      </li>
+		    </ul>
+		  </div>
+		</nav>
 <div id="wrapper">
  <font size="6">
 		<!-- start: Container -->
 		<div class="container">
-
 			<!-- start: Row -->
 			<div class="row">
-
 				<!-- start: Form Login user-->
 				<div align="center" class="span4">
 					<div class="title">
@@ -128,23 +147,11 @@
 					</div>
 
 				</div>
-	
-<!-- 				<div class="span4" th:if="${errore} or ${successo}">
-					<div class="title">
-						<h3>Riepilogo Informazioni</h3>
-					</div>
-					<font size="3">
-					<span class="text-error" th:text="${errore}"></span><br/>
-					<span class="text-success" th:text="${successo}"></span>
-					</font>
-				</div> -->
-
 			</div>
 		</div>
 <br></br>
 <br></br>
 </font> 
 	</div>
-
 </body>
 </html>
