--- a/galleria/src/main/resources/templates/contacts.html
+++ b/galleria/src/main/resources/templates/contacts.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1"/>
-<link rel="stylesheet" href="css/index.css" />
-<title>News</title>
-</head>
-<body text="white">
-<div class="topnav">
-  <a href="/">Home</a>
-  <a href="/news">News</a>
-  <a class="active" href="/contacts">Contact</a>
-  <a href="/user/artisti">Artists</a>
-  <a href="/user/opere">Work of art</a>
-  <a href="/accedi">Register here</a>
-  <a href="/accedi">Login/Logout</a>
-  <a href="/accedi_admin">Admin</a>
-</div>
-<br></br>
-<font size="7">Giacomo Bonanni 3801277869<br></br>
-Sorin Oancea
-</font>
-</body>
+	<head>
+		<meta charset="ISO-8859-1"/>
+		<link rel="stylesheet" href="css/index.css" />
+		<title>News</title>
+	</head>
+	<body text="white">
+		<div class="topnav">
+		  <a href="/">Home</a>
+		  <a href="/news">News</a>
+		  <a class="active" href="/contacts">Contact</a>
+		  <a href="/user/artisti">Artists</a>
+		  <a href="/user/opere">Work of art</a>
+		  <a href="/accedi">Register here</a>
+		  <a href="/accedi">Login/Logout</a>
+		  <a href="/accedi_admin">Admin</a>
+		</div>
+		<br></br>
+		<font size="7">
+			Giacomo Bonanni
+			<br></br>
+			Sorin Oancea
+		</font>
+	</body>
 </html>
