--- a/galleria/src/main/resources/templates/news.html
+++ b/galleria/src/main/resources/templates/news.html
@@ -1,26 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1"/>
-<link rel="stylesheet" href="css/index.css" />
-<title>News</title>
-</head>
-<body text="white">
-<div class="topnav">
-  <a href="/">Home</a>
-  <a class="active" href="/news">News</a>
-  <a href="/contacts">Contact</a>
-  <a href="/user/artisti">Artists</a>
-  <a href="/user/opere">Work of art</a>
-  <a href="/accedi">Register here</a>
-  <a href="/accedi">Login/Logout</a>
-  <a href="/accedi_admin">Administrator</a>
-</div>
-<font size="8">
-Il progetto e' stato organizzato dividendosi i compiti nel seguente modo:<br></br>
-Bonanni G. -> autenticazione (login/logout/ruoli), gestione dei collegamenti e della privatezza delle pagine, gestione degli artisti,<br></br>
-modifica opera aggiornata e fixata; Il validator non viene più bypassato all'inserimento di una nuova opera<br></br>
-Oancea S. -> css e bootstrap delle pagine, gestione delle opere
-</font>
-</body>
+	<head>
+		<!-- CSS only -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<!-- JavaScript Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="css/index.css" />
+		<link rel="stylesheet" href="css/index.css" />
+		<title>News</title>
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+	      <a class="navbar-brand" href="/">Art gallery</a>
+	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+	        <span class="navbar-toggler-icon"></span>
+	      </button>
+	      <div class="collapse navbar-collapse" id="navbarColor02">
+	        <ul class="navbar-nav mr-auto">
+	          <li class="nav-item active">
+	            <a class="nav-link" href="/">Home</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/news">News</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/contacts">Contact</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/user/artisti">Artists</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/user/opere">Works of art</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/accedi">Register here</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/accedi">Login/Logout</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="/accedi_admin">Administrator</a>
+	          </li>
+	        </ul>
+	        <!-- <form class="form-inline">
+	          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+	        </form> -->
+	      </div>
+	    </nav>
+		<div class="container card">
+		  <h5 class="card-header">Project Organization</h5>
+		  <div class="card-body">
+		    <!-- <h5 class="card-title">Project Organization</h5> -->
+		    <p class="card-text">
+		    	<div class="row">
+		    		<div class="col">
+		    			Bonanni Giacomo -> autenticazione (login/logout/ruoli), gestione dei collegamenti e della privatezza delle pagine, gestione degli artisti;
+						modifica opera aggiornata e fixata; Il validator non viene più bypassato all'inserimento di una nuova opera
+		    		</div>
+		    	</div>
+		    	<div class="row">
+		    		<div class="col">
+		    			Oancea Sorin -> css e bootstrap delle pagine, gestione delle opere
+		    		</div>
+		    	</div>
+		    </p>
+		  </div>
+		</div>
+	</body>
 </html>
